# playlistpipe

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
src/playlistpipe/: __init__.py  cli.py  config.py  interactive.py  logging_setup.py
src/playlistpipe/core/: __init__.py  models.py  scraper.py  utils.py
src/playlistpipe/exporters/: __init__.py  anki.py  notion_api.py  notion_markdown.py  obsidian.py
tests/: test_anki.py  test_interactive.py  test_notion_markdown.py  test_obsidian.py  test_utils.py
